[package]
name = "lolc"
version = "0.2.112"
edition = "2021"
license = "MIT"
repository = "https://github.com/Nilstrieb/lolc"
homepage = "https://github.com/Nilstrieb/lolc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.112"
